[project]
name = "video-edit-script"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "decorator==5.1.1",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==2.1.2",
    "numpy==2.2.3",
    "pillow==10.4.0",
    "proglog==0.1.10",
    "python-dotenv==1.0.1",
    "tqdm==4.67.1",
]
